--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 test ten behoeve van leer code nu adressen lijs adressenlijs
 
-html,code,html javascript en php.
+html,code,html javascript en php!
